@@ -1,3 +1,7 @@
+2004-03-27  Alan Modra  <amodra@bigpond.net.au>
+
+	* config/obj-aout.c (obj_aout_type): Remove #ifdef BFD_ASSEMBLER code.
+
 2004-03-23  Paul Brook  <paul@codesourcery.com>
 
 	* config/tc-arm.c (meabi_flags): New variable.
